--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
 <!-- 
   	LANIN DOMACI
+  	Milka domaci
   		<script src="js/jquery-v.1.10.1.js"></script>
   		<script src="js/lana.js"></script>
+  		<script src="js/milka.js"></script>
  -->
 		<title>jQuery Excersize</title>
 		<style>
